# chara_eval

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 7f089d7008ae_add_pos_ngram_similarity_table.py  df64620490b7_initial_migration.py  ec9b3b90a835_add_index_to_pos_ngram_similarity_table.py
docs/metrics/: pos_ngram_similarity.html
src/: api.py  calculate_article_similarities.py  const.py  database.py  eval_article.py  load_xml.py  pos_ngram_similarity.py  test_eval_article.py  visualize_similarity.py
src/entity/: article.py  pos_ngram_similarity.py
src/metrics/: ngram_cosine.py
src/models/: __init__.py  article.py
src/repositories/: article_repository.py  base_repository.py  pos_ngram_similarity_repository.py
src/services/: __init__.py  article_service.py  pos_ngram_similarity_service.py
